--- a/trunk/web_frontend/templates/default.html
+++ b/trunk/web_frontend/templates/default.html
@@ -4,12 +4,41 @@
 <title>
 Condor-Coasi Web Frontend - {% block title %} {{ pageTitle }} {% endblock %}
 </title>
+<link rel="stylesheet" type="text/css" href="static/style.css" /> 
+
 </head>
 
 <body>
-{% block body %}
-Body text
-{% endblock %}
-
+<div id="container">
+    <div id="header">
+        <div id="branding">
+            Condor-Copasi
+        </div>
+        <div id="user_tools">
+            Login
+        </div>
+        <div class="clear"></div>
+    </div>
+    <div id="breadcrumbs">
+        {{pageTitle }} &gt;&gt;
+    </div>
+    <div id="main">
+        <div id="sidebar">
+            <p> Text 1
+            <p> Text 2
+        </div>
+        <div id="content">    
+            {% block body %}
+            Body text
+            {% endblock %}
+        </div>
+        
+        <div class="clear"></div>
+        <div id="footer">
+            Condor-Copasi Web Frontend, version 0.1. Copyright 2010.
+        </div>
+    </div>
+    
+</div>
 </body>
 </html>
