--- a/trunk/web_frontend/templates/index.html
+++ b/trunk/web_frontend/templates/index.html
@@ -1,15 +1,7 @@
 {% extends "default.html" %}
 
-{% block title %} Home Page {% endblock %}
-
 {% block body %}
-1
-2
-3
-4
-5
-6
-
-
+<p> Welcome to the Condor-Copasi web frontend.</p>
+<p> At some point, useful information will appear here. In the mean time, select one of the options from the menu on the left, or login using the link in the top-right.
 {% endblock %}
 
