Create copasi_condor_db app and define models for job and condorjob. Add some html for submission of new tasks

--- a/trunk/web_frontend/static/style.css
+++ b/trunk/web_frontend/static/style.css
@@ -116,6 +116,10 @@ table.formtable th {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
+#sidebar ul > ul {
+    font-weight: normal;
+    font-size: 12px
+}
 #content {
     margin: 10px 10px 10px 150px;
     padding: 10px;
