--- a/trunk/web_frontend/templates/tasks/tasks.html
+++ b/trunk/web_frontend/templates/tasks/tasks.html
@@ -4,13 +4,13 @@
 
 {% block tasklist %}
 <ul>
-    <li>Optimization of Sensitivities</li>
+    <li><a href="http://{{request.get_host}}/tasks/new/sensitivity_optimization">Optimization of Sensitivities</a></li>
 </ul>
 {% endblock %}
 
 {%block body %}
 
-Body text
+<p>List of tasks to go here
 
 
 {%endblock%}
