Start work on interface between web_frontend and condor_copasi. Add class for CopasiModel object.

--- a/trunk/web_frontend/static/style.css
+++ b/trunk/web_frontend/static/style.css
@@ -51,8 +51,9 @@ ul.errorlist, div.error {
 div.review {
     background: #fcffbf;
     padding: 5px;
-    margin: 0.5em;
+    margin: 1em auto 1em auto;
     border: 1px solid gray;
+    max-width: 80%;
 }
 div.review th{
     font-weight: bold;
