--- a/trunk/web_frontend/templates/tasks/tasks.html
+++ b/trunk/web_frontend/templates/tasks/tasks.html
@@ -5,6 +5,11 @@
 {% block tasklist %}
 <ul>
     <li><a href="http://{{request.get_host}}/tasks/new/sensitivity_optimization">Optimization of Sensitivities</a></li>
+    <li><a href="http://{{request.get_host}}/tasks/new/stochastic_simulation">Stochastic Simulation</a></li>
+    <li>Scan in Parallel</li>
+    <li>Optimization Repeat</li>
+    <li>Parameter Estimation Repeat</li>
+    <li>Optimization Repeat (Different Algorithms)</li>
 </ul>
 {% endblock %}
 
