--- a/trunk/web_frontend/templates/tasks/new_task.html
+++ b/trunk/web_frontend/templates/tasks/new_task.html
@@ -31,7 +31,8 @@ There was a problem with the file you submitted. Please ensure the guidelines ab
 <table class="formtable">
 {{ form.as_table }}
 </table>
-<tr><td><input type="submit" value="Submit"></td></tr>
+
+<input type="submit" value="Submit">
 </form>
 
 {% endblock %}
