Process job output files by concatinating them, and then averaging over one large file

--- a/trunk/web_frontend/templates/my_account/running_jobs.html
+++ b/trunk/web_frontend/templates/my_account/running_jobs.html
@@ -24,7 +24,7 @@ You currently have no jobs running on the system. Once jobs have finished runnin
         <td><a href="http://{{request.get_host}}/my_account/jobs/details/{{job.name}}/">{{job.name}}</a></td>
         <td>{{job.get_job_type_display}}</td>
         <td>{{condor_jobs|length}}</td>
-        <td>{{job.start_time}}</td>
+        <td>{{job.submission_time}}</td>
     </tr>
     {% endfor %}
     
