--- a/trunk/web_frontend/static/style.css
+++ b/trunk/web_frontend/static/style.css
@@ -71,13 +71,24 @@ div.review {
     max-width: 80%;
 }
 
-div.complete {
+div.job_complete {
     background: #e3f7cd;
     padding: 5px;
     margin: 2em auto 2em auto;
     border: 1px solid gray;
 }
-
+div.job_error {
+    background: #f7d5cd;
+    padding: 5px;
+    margin: 2em auto 2em auto;
+    border: 1px solid gray;
+}
+div.job_remove {
+    background: #f6d49a;
+    padding: 5px;
+    margin: 2em auto 2em auto;
+    border: 1px solid gray;
+}
 div.review table{
     border-collapse: collapse;
     border: 1px solid gray;
@@ -185,7 +196,7 @@ table.formtable th {
 
 
 #sidebar {
-    width: 110px;
+    width: 150px;
     border: 1px solid gray;
     float: left;
     font-size: 14px;
@@ -213,7 +224,7 @@ table.formtable th {
     font-size: 12px
 }
 #content {
-    margin: 10px 10px 10px 150px;
+    margin: 10px 10px 10px 190px;
     padding: 10px;
     border: 1px solid gray;
     background: white;
