Implement basic daemon functionality. Start work on parallel scan

--- a/trunk/web_frontend/templates/tasks/tasks.html
+++ b/trunk/web_frontend/templates/tasks/tasks.html
@@ -6,10 +6,10 @@
 <ul>
     <li><a href="http://{{request.get_host}}/tasks/new/sensitivity_optimization">Optimization of Sensitivities</a></li>
     <li><a href="http://{{request.get_host}}/tasks/new/stochastic_simulation">Stochastic Simulation</a></li>
-    <li>Scan in Parallel</li>
-    <li>Optimization Repeat</li>
-    <li>Parameter Estimation Repeat</li>
-    <li>Optimization Repeat (Different Algorithms)</li>
+    <li><a href="http://{{request.get_host}}/tasks/new/parallel_scan">Scan in Parallel</a></li>
+    <li><a href="http://{{request.get_host}}/tasks/new/optimization_repeat">Optimization Repeat</a></li>
+    <li><a href="http://{{request.get_host}}/tasks/new/parameter_estimation_repeat">Parameter Estimation Repeat</a></li>
+    <li><a href="http://{{request.get_host}}/tasks/new/optimization_repeat_different_algorithms">Optimization Repeat (Different Algorithms)</a></li>
 </ul>
 {% endblock %}
 
