Implement parameter estimation repeat, and fix bug in optimization repeat when setting number of repeats per scan task. Still need to set appropriate reports for optimization repeat and parameter estimation repeat

--- a/trunk/web_frontend/templates/my_account/job_details.html
+++ b/trunk/web_frontend/templates/my_account/job_details.html
@@ -58,6 +58,8 @@
         {% endif %}
         {% if job.job_type == 'SS' %}
         <br><b><em>Time course method:</em></b> {{model.get_timecourse_method}}
+        {% endif %}
+        {% if job.job_type == 'SS' or job.job_type == 'OR' %}
         <br><b><em>Repeats:</em></b> {{job.runs}}
         {% endif %}
         </td></tr>
